// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`trie 1`] = `
AhoCorasick {
  "trie": Trie {
    "data": [],
    "fail": null,
    "is_word": null,
    "next": {
      "ア": Trie {
        "data": [],
        "fail": null,
        "is_word": null,
        "next": {
          "ラ": Trie {
            "data": [],
            "fail": Trie {
              "data": [],
              "fail": null,
              "is_word": null,
              "next": {
                "ス": Trie {
                  "data": [],
                  "fail": Trie {
                    "data": [],
                    "fail": null,
                    "is_word": null,
                    "next": {
                      "キ": Trie {
                        "data": [],
                        "fail": Trie {
                          "data": [],
                          "fail": null,
                          "is_word": null,
                          "next": {
                            "ン": Trie {
                              "data": [],
                              "fail": null,
                              "is_word": null,
                              "next": {
                                "グ": Trie {
                                  "data": [
                                    [
                                      "王",
                                    ],
                                  ],
                                  "fail": null,
                                  "is_word": true,
                                  "next": {},
                                  "value": "キング",
                                },
                              },
                              "value": "キン",
                            },
                          },
                          "value": "キ",
                        },
                        "is_word": null,
                        "next": {
                          "ュ": Trie {
                            "data": [],
                            "fail": null,
                            "is_word": null,
                            "next": {
                              "ラ": Trie {
                                "data": [
                                  [
                                    "斯庫拉",
                                  ],
                                ],
                                "fail": [Circular],
                                "is_word": true,
                                "next": {},
                                "value": "スキュラ",
                              },
                            },
                            "value": "スキュ",
                          },
                        },
                        "value": "スキ",
                      },
                    },
                    "value": "ス",
                  },
                  "is_word": null,
                  "next": {
                    "ト": Trie {
                      "data": [
                        [
                          "Lust 性欲 渇望 Last 最後",
                        ],
                      ],
                      "fail": null,
                      "is_word": true,
                      "next": {
                        "ロ": Trie {
                          "data": [],
                          "fail": Trie {
                            "data": [],
                            "fail": null,
                            "is_word": null,
                            "next": {
                              "ー": Trie {
                                "data": [],
                                "fail": null,
                                "is_word": null,
                                "next": {
                                  "ズ": Trie {
                                    "data": [
                                      [
                                        "薔薇 玫瑰",
                                      ],
                                    ],
                                    "fail": null,
                                    "is_word": true,
                                    "next": {},
                                    "value": "ローズ",
                                  },
                                },
                                "value": "ロー",
                              },
                            },
                            "value": "ロ",
                          },
                          "is_word": null,
                          "next": {
                            "ー": Trie {
                              "data": [],
                              "fail": Trie {
                                "data": [],
                                "fail": null,
                                "is_word": null,
                                "next": {
                                  "ズ": Trie {
                                    "data": [
                                      [
                                        "薔薇 玫瑰",
                                      ],
                                    ],
                                    "fail": null,
                                    "is_word": true,
                                    "next": {},
                                    "value": "ローズ",
                                  },
                                },
                                "value": "ロー",
                              },
                              "is_word": null,
                              "next": {
                                "ズ": Trie {
                                  "data": [
                                    [
                                      "淫欲罗茲 最後的玫瑰",
                                    ],
                                  ],
                                  "fail": Trie {
                                    "data": [
                                      [
                                        "薔薇 玫瑰",
                                      ],
                                    ],
                                    "fail": null,
                                    "is_word": true,
                                    "next": {},
                                    "value": "ローズ",
                                  },
                                  "is_word": true,
                                  "next": {},
                                  "value": "ラストローズ",
                                },
                              },
                              "value": "ラストロー",
                            },
                          },
                          "value": "ラストロ",
                        },
                      },
                      "value": "ラスト",
                    },
                  },
                  "value": "ラス",
                },
              },
              "value": "ラ",
            },
            "is_word": null,
            "next": {
              "ク": Trie {
                "data": [],
                "fail": Trie {
                  "data": [],
                  "fail": null,
                  "is_word": null,
                  "next": {
                    "ノ": Trie {
                      "data": [],
                      "fail": null,
                      "is_word": null,
                      "next": {
                        "イ": Trie {
                          "data": [],
                          "fail": null,
                          "is_word": null,
                          "next": {
                            "チ": Trie {
                              "data": [
                                [
                                  "女忍者",
                                ],
                              ],
                              "fail": null,
                              "is_word": true,
                              "next": {},
                              "value": "クノイチ",
                            },
                          },
                          "value": "クノイ",
                        },
                      },
                      "value": "クノ",
                    },
                    "リ": Trie {
                      "data": [],
                      "fail": null,
                      "is_word": null,
                      "next": {
                        "ス": Trie {
                          "data": [],
                          "fail": Trie {
                            "data": [],
                            "fail": null,
                            "is_word": null,
                            "next": {
                              "キ": Trie {
                                "data": [],
                                "fail": Trie {
                                  "data": [],
                                  "fail": null,
                                  "is_word": null,
                                  "next": {
                                    "ン": Trie {
                                      "data": [],
                                      "fail": null,
                                      "is_word": null,
                                      "next": {
                                        "グ": Trie {
                                          "data": [
                                            [
                                              "王",
                                            ],
                                          ],
                                          "fail": null,
                                          "is_word": true,
                                          "next": {},
                                          "value": "キング",
                                        },
                                      },
                                      "value": "キン",
                                    },
                                  },
                                  "value": "キ",
                                },
                                "is_word": null,
                                "next": {
                                  "ュ": Trie {
                                    "data": [],
                                    "fail": null,
                                    "is_word": null,
                                    "next": {
                                      "ラ": Trie {
                                        "data": [
                                          [
                                            "斯庫拉",
                                          ],
                                        ],
                                        "fail": Trie {
                                          "data": [],
                                          "fail": null,
                                          "is_word": null,
                                          "next": {
                                            "ス": Trie {
                                              "data": [],
                                              "fail": [Circular],
                                              "is_word": null,
                                              "next": {
                                                "ト": Trie {
                                                  "data": [
                                                    [
                                                      "Lust 性欲 渇望 Last 最後",
                                                    ],
                                                  ],
                                                  "fail": null,
                                                  "is_word": true,
                                                  "next": {
                                                    "ロ": Trie {
                                                      "data": [],
                                                      "fail": Trie {
                                                        "data": [],
                                                        "fail": null,
                                                        "is_word": null,
                                                        "next": {
                                                          "ー": Trie {
                                                            "data": [],
                                                            "fail": null,
                                                            "is_word": null,
                                                            "next": {
                                                              "ズ": Trie {
                                                                "data": [
                                                                  [
                                                                    "薔薇 玫瑰",
                                                                  ],
                                                                ],
                                                                "fail": null,
                                                                "is_word": true,
                                                                "next": {},
                                                                "value": "ローズ",
                                                              },
                                                            },
                                                            "value": "ロー",
                                                          },
                                                        },
                                                        "value": "ロ",
                                                      },
                                                      "is_word": null,
                                                      "next": {
                                                        "ー": Trie {
                                                          "data": [],
                                                          "fail": Trie {
                                                            "data": [],
                                                            "fail": null,
                                                            "is_word": null,
                                                            "next": {
                                                              "ズ": Trie {
                                                                "data": [
                                                                  [
                                                                    "薔薇 玫瑰",
                                                                  ],
                                                                ],
                                                                "fail": null,
                                                                "is_word": true,
                                                                "next": {},
                                                                "value": "ローズ",
                                                              },
                                                            },
                                                            "value": "ロー",
                                                          },
                                                          "is_word": null,
                                                          "next": {
                                                            "ズ": Trie {
                                                              "data": [
                                                                [
                                                                  "淫欲罗茲 最後的玫瑰",
                                                                ],
                                                              ],
                                                              "fail": Trie {
                                                                "data": [
                                                                  [
                                                                    "薔薇 玫瑰",
                                                                  ],
                                                                ],
                                                                "fail": null,
                                                                "is_word": true,
                                                                "next": {},
                                                                "value": "ローズ",
                                                              },
                                                              "is_word": true,
                                                              "next": {},
                                                              "value": "ラストローズ",
                                                            },
                                                          },
                                                          "value": "ラストロー",
                                                        },
                                                      },
                                                      "value": "ラストロ",
                                                    },
                                                  },
                                                  "value": "ラスト",
                                                },
                                              },
                                              "value": "ラス",
                                            },
                                          },
                                          "value": "ラ",
                                        },
                                        "is_word": true,
                                        "next": {},
                                        "value": "スキュラ",
                                      },
                                    },
                                    "value": "スキュ",
                                  },
                                },
                                "value": "スキ",
                              },
                            },
                            "value": "ス",
                          },
                          "is_word": null,
                          "next": {
                            "タ": Trie {
                              "data": [],
                              "fail": null,
                              "is_word": null,
                              "next": {
                                "ル": Trie {
                                  "data": [
                                    [
                                      "水晶",
                                    ],
                                  ],
                                  "fail": null,
                                  "is_word": true,
                                  "next": {},
                                  "value": "クリスタル",
                                },
                              },
                              "value": "クリスタ",
                            },
                          },
                          "value": "クリス",
                        },
                      },
                      "value": "クリ",
                    },
                  },
                  "value": "ク",
                },
                "is_word": null,
                "next": {
                  "ネ": Trie {
                    "data": [
                      [
                        "阿剌克涅",
                      ],
                    ],
                    "fail": null,
                    "is_word": true,
                    "next": {},
                    "value": "アラクネ",
                  },
                },
                "value": "アラク",
              },
            },
            "value": "アラ",
          },
        },
        "value": "ア",
      },
      "ウ": Trie {
        "data": [],
        "fail": null,
        "is_word": null,
        "next": {
          "ェ": Trie {
            "data": [],
            "fail": null,
            "is_word": null,
            "next": {
              "ン": Trie {
                "data": [],
                "fail": null,
                "is_word": null,
                "next": {
                  "デ": Trie {
                    "data": [],
                    "fail": null,
                    "is_word": null,
                    "next": {
                      "ィ": Trie {
                        "data": [],
                        "fail": null,
                        "is_word": null,
                        "next": {
                          "ゴ": Trie {
                            "data": [
                              [
                                "威尔迪哥",
                              ],
                            ],
                            "fail": Trie {
                              "data": [],
                              "fail": null,
                              "is_word": null,
                              "next": {
                                "ブ": Trie {
                                  "data": [],
                                  "fail": null,
                                  "is_word": null,
                                  "next": {
                                    "リ": Trie {
                                      "data": [],
                                      "fail": null,
                                      "is_word": null,
                                      "next": {
                                        "ン": Trie {
                                          "data": [
                                            [
                                              "哥布林",
                                            ],
                                          ],
                                          "fail": null,
                                          "is_word": true,
                                          "next": {},
                                          "value": "ゴブリン",
                                        },
                                      },
                                      "value": "ゴブリ",
                                    },
                                  },
                                  "value": "ゴブ",
                                },
                              },
                              "value": "ゴ",
                            },
                            "is_word": true,
                            "next": {},
                            "value": "ウェンディゴ",
                          },
                        },
                        "value": "ウェンディ",
                      },
                    },
                    "value": "ウェンデ",
                  },
                },
                "value": "ウェン",
              },
            },
            "value": "ウェ",
          },
        },
        "value": "ウ",
      },
      "エ": Trie {
        "data": [],
        "fail": null,
        "is_word": null,
        "next": {
          "ン": Trie {
            "data": [],
            "fail": null,
            "is_word": null,
            "next": {
              "プ": Trie {
                "data": [],
                "fail": null,
                "is_word": null,
                "next": {
                  "ー": Trie {
                    "data": [],
                    "fail": null,
                    "is_word": null,
                    "next": {
                      "サ": Trie {
                        "data": [
                          [
                            "安普莎",
                          ],
                        ],
                        "fail": Trie {
                          "data": [],
                          "fail": null,
                          "is_word": null,
                          "next": {
                            "ム": Trie {
                              "data": [],
                              "fail": null,
                              "is_word": null,
                              "next": {
                                "ラ": Trie {
                                  "data": [],
                                  "fail": Trie {
                                    "data": [],
                                    "fail": null,
                                    "is_word": null,
                                    "next": {
                                      "ス": Trie {
                                        "data": [],
                                        "fail": Trie {
                                          "data": [],
                                          "fail": null,
                                          "is_word": null,
                                          "next": {
                                            "キ": Trie {
                                              "data": [],
                                              "fail": Trie {
                                                "data": [],
                                                "fail": null,
                                                "is_word": null,
                                                "next": {
                                                  "ン": Trie {
                                                    "data": [],
                                                    "fail": null,
                                                    "is_word": null,
                                                    "next": {
                                                      "グ": Trie {
                                                        "data": [
                                                          [
                                                            "王",
                                                          ],
                                                        ],
                                                        "fail": null,
                                                        "is_word": true,
                                                        "next": {},
                                                        "value": "キング",
                                                      },
                                                    },
                                                    "value": "キン",
                                                  },
                                                },
                                                "value": "キ",
                                              },
                                              "is_word": null,
                                              "next": {
                                                "ュ": Trie {
                                                  "data": [],
                                                  "fail": null,
                                                  "is_word": null,
                                                  "next": {
                                                    "ラ": Trie {
                                                      "data": [
                                                        [
                                                          "斯庫拉",
                                                        ],
                                                      ],
                                                      "fail": [Circular],
                                                      "is_word": true,
                                                      "next": {},
                                                      "value": "スキュラ",
                                                    },
                                                  },
                                                  "value": "スキュ",
                                                },
                                              },
                                              "value": "スキ",
                                            },
                                          },
                                          "value": "ス",
                                        },
                                        "is_word": null,
                                        "next": {
                                          "ト": Trie {
                                            "data": [
                                              [
                                                "Lust 性欲 渇望 Last 最後",
                                              ],
                                            ],
                                            "fail": null,
                                            "is_word": true,
                                            "next": {
                                              "ロ": Trie {
                                                "data": [],
                                                "fail": Trie {
                                                  "data": [],
                                                  "fail": null,
                                                  "is_word": null,
                                                  "next": {
                                                    "ー": Trie {
                                                      "data": [],
                                                      "fail": null,
                                                      "is_word": null,
                                                      "next": {
                                                        "ズ": Trie {
                                                          "data": [
                                                            [
                                                              "薔薇 玫瑰",
                                                            ],
                                                          ],
                                                          "fail": null,
                                                          "is_word": true,
                                                          "next": {},
                                                          "value": "ローズ",
                                                        },
                                                      },
                                                      "value": "ロー",
                                                    },
                                                  },
                                                  "value": "ロ",
                                                },
                                                "is_word": null,
                                                "next": {
                                                  "ー": Trie {
                                                    "data": [],
                                                    "fail": Trie {
                                                      "data": [],
                                                      "fail": null,
                                                      "is_word": null,
                                                      "next": {
                                                        "ズ": Trie {
                                                          "data": [
                                                            [
                                                              "薔薇 玫瑰",
                                                            ],
                                                          ],
                                                          "fail": null,
                                                          "is_word": true,
                                                          "next": {},
                                                          "value": "ローズ",
                                                        },
                                                      },
                                                      "value": "ロー",
                                                    },
                                                    "is_word": null,
                                                    "next": {
                                                      "ズ": Trie {
                                                        "data": [
                                                          [
                                                            "淫欲罗茲 最後的玫瑰",
                                                          ],
                                                        ],
                                                        "fail": Trie {
                                                          "data": [
                                                            [
                                                              "薔薇 玫瑰",
                                                            ],
                                                          ],
                                                          "fail": null,
                                                          "is_word": true,
                                                          "next": {},
                                                          "value": "ローズ",
                                                        },
                                                        "is_word": true,
                                                        "next": {},
                                                        "value": "ラストローズ",
                                                      },
                                                    },
                                                    "value": "ラストロー",
                                                  },
                                                },
                                                "value": "ラストロ",
                                              },
                                            },
                                            "value": "ラスト",
                                          },
                                        },
                                        "value": "ラス",
                                      },
                                    },
                                    "value": "ラ",
                                  },
                                  "is_word": null,
                                  "next": {
                                    "イ": Trie {
                                      "data": [
                                        [
                                          "武士",
                                        ],
                                      ],
                                      "fail": null,
                                      "is_word": true,
                                      "next": {},
                                      "value": "サムライ",
                                    },
                                  },
                                  "value": "サムラ",
                                },
                              },
                              "value": "サム",
                            },
                          },
                          "value": "サ",
                        },
                        "is_word": true,
                        "next": {},
                        "value": "エンプーサ",
                      },
                    },
                    "value": "エンプー",
                  },
                },
                "value": "エンプ",
              },
            },
            "value": "エン",
          },
        },
        "value": "エ",
      },
      "オ": Trie {
        "data": [],
        "fail": null,
        "is_word": null,
        "next": {
          "リ": Trie {
            "data": [],
            "fail": null,
            "is_word": null,
            "next": {
              "ジ": Trie {
                "data": [],
                "fail": null,
                "is_word": null,
                "next": {
                  "ン": Trie {
                    "data": [
                      [
                        "起源",
                      ],
                    ],
                    "fail": null,
                    "is_word": true,
                    "next": {},
                    "value": "オリジン",
                  },
                },
                "value": "オリジ",
              },
            },
            "value": "オリ",
          },
        },
        "value": "オ",
      },
      "キ": Trie {
        "data": [],
        "fail": null,
        "is_word": null,
        "next": {
          "ン": Trie {
            "data": [],
            "fail": null,
            "is_word": null,
            "next": {
              "グ": Trie {
                "data": [
                  [
                    "王",
                  ],
                ],
                "fail": null,
                "is_word": true,
                "next": {},
                "value": "キング",
              },
            },
            "value": "キン",
          },
        },
        "value": "キ",
      },
      "ク": Trie {
        "data": [],
        "fail": null,
        "is_word": null,
        "next": {
          "ノ": Trie {
            "data": [],
            "fail": null,
            "is_word": null,
            "next": {
              "イ": Trie {
                "data": [],
                "fail": null,
                "is_word": null,
                "next": {
                  "チ": Trie {
                    "data": [
                      [
                        "女忍者",
                      ],
                    ],
                    "fail": null,
                    "is_word": true,
                    "next": {},
                    "value": "クノイチ",
                  },
                },
                "value": "クノイ",
              },
            },
            "value": "クノ",
          },
          "リ": Trie {
            "data": [],
            "fail": null,
            "is_word": null,
            "next": {
              "ス": Trie {
                "data": [],
                "fail": Trie {
                  "data": [],
                  "fail": null,
                  "is_word": null,
                  "next": {
                    "キ": Trie {
                      "data": [],
                      "fail": Trie {
                        "data": [],
                        "fail": null,
                        "is_word": null,
                        "next": {
                          "ン": Trie {
                            "data": [],
                            "fail": null,
                            "is_word": null,
                            "next": {
                              "グ": Trie {
                                "data": [
                                  [
                                    "王",
                                  ],
                                ],
                                "fail": null,
                                "is_word": true,
                                "next": {},
                                "value": "キング",
                              },
                            },
                            "value": "キン",
                          },
                        },
                        "value": "キ",
                      },
                      "is_word": null,
                      "next": {
                        "ュ": Trie {
                          "data": [],
                          "fail": null,
                          "is_word": null,
                          "next": {
                            "ラ": Trie {
                              "data": [
                                [
                                  "斯庫拉",
                                ],
                              ],
                              "fail": Trie {
                                "data": [],
                                "fail": null,
                                "is_word": null,
                                "next": {
                                  "ス": Trie {
                                    "data": [],
                                    "fail": [Circular],
                                    "is_word": null,
                                    "next": {
                                      "ト": Trie {
                                        "data": [
                                          [
                                            "Lust 性欲 渇望 Last 最後",
                                          ],
                                        ],
                                        "fail": null,
                                        "is_word": true,
                                        "next": {
                                          "ロ": Trie {
                                            "data": [],
                                            "fail": Trie {
                                              "data": [],
                                              "fail": null,
                                              "is_word": null,
                                              "next": {
                                                "ー": Trie {
                                                  "data": [],
                                                  "fail": null,
                                                  "is_word": null,
                                                  "next": {
                                                    "ズ": Trie {
                                                      "data": [
                                                        [
                                                          "薔薇 玫瑰",
                                                        ],
                                                      ],
                                                      "fail": null,
                                                      "is_word": true,
                                                      "next": {},
                                                      "value": "ローズ",
                                                    },
                                                  },
                                                  "value": "ロー",
                                                },
                                              },
                                              "value": "ロ",
                                            },
                                            "is_word": null,
                                            "next": {
                                              "ー": Trie {
                                                "data": [],
                                                "fail": Trie {
                                                  "data": [],
                                                  "fail": null,
                                                  "is_word": null,
                                                  "next": {
                                                    "ズ": Trie {
                                                      "data": [
                                                        [
                                                          "薔薇 玫瑰",
                                                        ],
                                                      ],
                                                      "fail": null,
                                                      "is_word": true,
                                                      "next": {},
                                                      "value": "ローズ",
                                                    },
                                                  },
                                                  "value": "ロー",
                                                },
                                                "is_word": null,
                                                "next": {
                                                  "ズ": Trie {
                                                    "data": [
                                                      [
                                                        "淫欲罗茲 最後的玫瑰",
                                                      ],
                                                    ],
                                                    "fail": Trie {
                                                      "data": [
                                                        [
                                                          "薔薇 玫瑰",
                                                        ],
                                                      ],
                                                      "fail": null,
                                                      "is_word": true,
                                                      "next": {},
                                                      "value": "ローズ",
                                                    },
                                                    "is_word": true,
                                                    "next": {},
                                                    "value": "ラストローズ",
                                                  },
                                                },
                                                "value": "ラストロー",
                                              },
                                            },
                                            "value": "ラストロ",
                                          },
                                        },
                                        "value": "ラスト",
                                      },
                                    },
                                    "value": "ラス",
                                  },
                                },
                                "value": "ラ",
                              },
                              "is_word": true,
                              "next": {},
                              "value": "スキュラ",
                            },
                          },
                          "value": "スキュ",
                        },
                      },
                      "value": "スキ",
                    },
                  },
                  "value": "ス",
                },
                "is_word": null,
                "next": {
                  "タ": Trie {
                    "data": [],
                    "fail": null,
                    "is_word": null,
                    "next": {
                      "ル": Trie {
                        "data": [
                          [
                            "水晶",
                          ],
                        ],
                        "fail": null,
                        "is_word": true,
                        "next": {},
                        "value": "クリスタル",
                      },
                    },
                    "value": "クリスタ",
                  },
                },
                "value": "クリス",
              },
            },
            "value": "クリ",
          },
        },
        "value": "ク",
      },
      "コ": Trie {
        "data": [],
        "fail": null,
        "is_word": null,
        "next": {
          "ボ": Trie {
            "data": [],
            "fail": null,
            "is_word": null,
            "next": {
              "ル": Trie {
                "data": [],
                "fail": null,
                "is_word": null,
                "next": {
                  "ト": Trie {
                    "data": [
                      [
                        "狗头人",
                      ],
                    ],
                    "fail": null,
                    "is_word": true,
                    "next": {},
                    "value": "コボルト",
                  },
                },
                "value": "コボル",
              },
            },
            "value": "コボ",
          },
        },
        "value": "コ",
      },
      "ゴ": Trie {
        "data": [],
        "fail": null,
        "is_word": null,
        "next": {
          "ブ": Trie {
            "data": [],
            "fail": null,
            "is_word": null,
            "next": {
              "リ": Trie {
                "data": [],
                "fail": null,
                "is_word": null,
                "next": {
                  "ン": Trie {
                    "data": [
                      [
                        "哥布林",
                      ],
                    ],
                    "fail": null,
                    "is_word": true,
                    "next": {},
                    "value": "ゴブリン",
                  },
                },
                "value": "ゴブリ",
              },
            },
            "value": "ゴブ",
          },
        },
        "value": "ゴ",
      },
      "サ": Trie {
        "data": [],
        "fail": null,
        "is_word": null,
        "next": {
          "ム": Trie {
            "data": [],
            "fail": null,
            "is_word": null,
            "next": {
              "ラ": Trie {
                "data": [],
                "fail": Trie {
                  "data": [],
                  "fail": null,
                  "is_word": null,
                  "next": {
                    "ス": Trie {
                      "data": [],
                      "fail": Trie {
                        "data": [],
                        "fail": null,
                        "is_word": null,
                        "next": {
                          "キ": Trie {
                            "data": [],
                            "fail": Trie {
                              "data": [],
                              "fail": null,
                              "is_word": null,
                              "next": {
                                "ン": Trie {
                                  "data": [],
                                  "fail": null,
                                  "is_word": null,
                                  "next": {
                                    "グ": Trie {
                                      "data": [
                                        [
                                          "王",
                                        ],
                                      ],
                                      "fail": null,
                                      "is_word": true,
                                      "next": {},
                                      "value": "キング",
                                    },
                                  },
                                  "value": "キン",
                                },
                              },
                              "value": "キ",
                            },
                            "is_word": null,
                            "next": {
                              "ュ": Trie {
                                "data": [],
                                "fail": null,
                                "is_word": null,
                                "next": {
                                  "ラ": Trie {
                                    "data": [
                                      [
                                        "斯庫拉",
                                      ],
                                    ],
                                    "fail": [Circular],
                                    "is_word": true,
                                    "next": {},
                                    "value": "スキュラ",
                                  },
                                },
                                "value": "スキュ",
                              },
                            },
                            "value": "スキ",
                          },
                        },
                        "value": "ス",
                      },
                      "is_word": null,
                      "next": {
                        "ト": Trie {
                          "data": [
                            [
                              "Lust 性欲 渇望 Last 最後",
                            ],
                          ],
                          "fail": null,
                          "is_word": true,
                          "next": {
                            "ロ": Trie {
                              "data": [],
                              "fail": Trie {
                                "data": [],
                                "fail": null,
                                "is_word": null,
                                "next": {
                                  "ー": Trie {
                                    "data": [],
                                    "fail": null,
                                    "is_word": null,
                                    "next": {
                                      "ズ": Trie {
                                        "data": [
                                          [
                                            "薔薇 玫瑰",
                                          ],
                                        ],
                                        "fail": null,
                                        "is_word": true,
                                        "next": {},
                                        "value": "ローズ",
                                      },
                                    },
                                    "value": "ロー",
                                  },
                                },
                                "value": "ロ",
                              },
                              "is_word": null,
                              "next": {
                                "ー": Trie {
                                  "data": [],
                                  "fail": Trie {
                                    "data": [],
                                    "fail": null,
                                    "is_word": null,
                                    "next": {
                                      "ズ": Trie {
                                        "data": [
                                          [
                                            "薔薇 玫瑰",
                                          ],
                                        ],
                                        "fail": null,
                                        "is_word": true,
                                        "next": {},
                                        "value": "ローズ",
                                      },
                                    },
                                    "value": "ロー",
                                  },
                                  "is_word": null,
                                  "next": {
                                    "ズ": Trie {
                                      "data": [
                                        [
                                          "淫欲罗茲 最後的玫瑰",
                                        ],
                                      ],
                                      "fail": Trie {
                                        "data": [
                                          [
                                            "薔薇 玫瑰",
                                          ],
                                        ],
                                        "fail": null,
                                        "is_word": true,
                                        "next": {},
                                        "value": "ローズ",
                                      },
                                      "is_word": true,
                                      "next": {},
                                      "value": "ラストローズ",
                                    },
                                  },
                                  "value": "ラストロー",
                                },
                              },
                              "value": "ラストロ",
                            },
                          },
                          "value": "ラスト",
                        },
                      },
                      "value": "ラス",
                    },
                  },
                  "value": "ラ",
                },
                "is_word": null,
                "next": {
                  "イ": Trie {
                    "data": [
                      [
                        "武士",
                      ],
                    ],
                    "fail": null,
                    "is_word": true,
                    "next": {},
                    "value": "サムライ",
                  },
                },
                "value": "サムラ",
              },
            },
            "value": "サム",
          },
        },
        "value": "サ",
      },
      "ス": Trie {
        "data": [],
        "fail": null,
        "is_word": null,
        "next": {
          "キ": Trie {
            "data": [],
            "fail": Trie {
              "data": [],
              "fail": null,
              "is_word": null,
              "next": {
                "ン": Trie {
                  "data": [],
                  "fail": null,
                  "is_word": null,
                  "next": {
                    "グ": Trie {
                      "data": [
                        [
                          "王",
                        ],
                      ],
                      "fail": null,
                      "is_word": true,
                      "next": {},
                      "value": "キング",
                    },
                  },
                  "value": "キン",
                },
              },
              "value": "キ",
            },
            "is_word": null,
            "next": {
              "ュ": Trie {
                "data": [],
                "fail": null,
                "is_word": null,
                "next": {
                  "ラ": Trie {
                    "data": [
                      [
                        "斯庫拉",
                      ],
                    ],
                    "fail": Trie {
                      "data": [],
                      "fail": null,
                      "is_word": null,
                      "next": {
                        "ス": Trie {
                          "data": [],
                          "fail": [Circular],
                          "is_word": null,
                          "next": {
                            "ト": Trie {
                              "data": [
                                [
                                  "Lust 性欲 渇望 Last 最後",
                                ],
                              ],
                              "fail": null,
                              "is_word": true,
                              "next": {
                                "ロ": Trie {
                                  "data": [],
                                  "fail": Trie {
                                    "data": [],
                                    "fail": null,
                                    "is_word": null,
                                    "next": {
                                      "ー": Trie {
                                        "data": [],
                                        "fail": null,
                                        "is_word": null,
                                        "next": {
                                          "ズ": Trie {
                                            "data": [
                                              [
                                                "薔薇 玫瑰",
                                              ],
                                            ],
                                            "fail": null,
                                            "is_word": true,
                                            "next": {},
                                            "value": "ローズ",
                                          },
                                        },
                                        "value": "ロー",
                                      },
                                    },
                                    "value": "ロ",
                                  },
                                  "is_word": null,
                                  "next": {
                                    "ー": Trie {
                                      "data": [],
                                      "fail": Trie {
                                        "data": [],
                                        "fail": null,
                                        "is_word": null,
                                        "next": {
                                          "ズ": Trie {
                                            "data": [
                                              [
                                                "薔薇 玫瑰",
                                              ],
                                            ],
                                            "fail": null,
                                            "is_word": true,
                                            "next": {},
                                            "value": "ローズ",
                                          },
                                        },
                                        "value": "ロー",
                                      },
                                      "is_word": null,
                                      "next": {
                                        "ズ": Trie {
                                          "data": [
                                            [
                                              "淫欲罗茲 最後的玫瑰",
                                            ],
                                          ],
                                          "fail": Trie {
                                            "data": [
                                              [
                                                "薔薇 玫瑰",
                                              ],
                                            ],
                                            "fail": null,
                                            "is_word": true,
                                            "next": {},
                                            "value": "ローズ",
                                          },
                                          "is_word": true,
                                          "next": {},
                                          "value": "ラストローズ",
                                        },
                                      },
                                      "value": "ラストロー",
                                    },
                                  },
                                  "value": "ラストロ",
                                },
                              },
                              "value": "ラスト",
                            },
                          },
                          "value": "ラス",
                        },
                      },
                      "value": "ラ",
                    },
                    "is_word": true,
                    "next": {},
                    "value": "スキュラ",
                  },
                },
                "value": "スキュ",
              },
            },
            "value": "スキ",
          },
        },
        "value": "ス",
      },
      "ダ": Trie {
        "data": [],
        "fail": null,
        "is_word": null,
        "next": {
          "ン": Trie {
            "data": [],
            "fail": null,
            "is_word": null,
            "next": {
              "ピ": Trie {
                "data": [],
                "fail": null,
                "is_word": null,
                "next": {
                  "ー": Trie {
                    "data": [],
                    "fail": null,
                    "is_word": null,
                    "next": {
                      "ル": Trie {
                        "data": [
                          [
                            "丹皮尔",
                          ],
                        ],
                        "fail": null,
                        "is_word": true,
                        "next": {},
                        "value": "ダンピール",
                      },
                    },
                    "value": "ダンピー",
                  },
                },
                "value": "ダンピ",
              },
            },
            "value": "ダン",
          },
        },
        "value": "ダ",
      },
      "ド": Trie {
        "data": [],
        "fail": null,
        "is_word": null,
        "next": {
          "ル": Trie {
            "data": [],
            "fail": null,
            "is_word": null,
            "next": {
              "イ": Trie {
                "data": [],
                "fail": null,
                "is_word": null,
                "next": {
                  "ド": Trie {
                    "data": [
                      [
                        "德魯伊",
                      ],
                    ],
                    "fail": [Circular],
                    "is_word": true,
                    "next": {},
                    "value": "ドルイド",
                  },
                },
                "value": "ドルイ",
              },
            },
            "value": "ドル",
          },
        },
        "value": "ド",
      },
      "ハ": Trie {
        "data": [],
        "fail": null,
        "is_word": null,
        "next": {
          "イ": Trie {
            "data": [
              [
                "高等",
              ],
            ],
            "fail": null,
            "is_word": true,
            "next": {},
            "value": "ハイ",
          },
        },
        "value": "ハ",
      },
      "ホ": Trie {
        "data": [],
        "fail": null,
        "is_word": null,
        "next": {
          "ブ": Trie {
            "data": [
              [
                "滚刀",
              ],
            ],
            "fail": null,
            "is_word": true,
            "next": {},
            "value": "ホブ",
          },
        },
        "value": "ホ",
      },
      "ポ": Trie {
        "data": [],
        "fail": null,
        "is_word": null,
        "next": {
          "イ": Trie {
            "data": [],
            "fail": null,
            "is_word": null,
            "next": {
              "ズ": Trie {
                "data": [],
                "fail": null,
                "is_word": null,
                "next": {
                  "ン": Trie {
                    "data": [
                      [
                        "劇毒",
                      ],
                    ],
                    "fail": null,
                    "is_word": true,
                    "next": {},
                    "value": "ポイズン",
                  },
                },
                "value": "ポイズ",
              },
            },
            "value": "ポイ",
          },
        },
        "value": "ポ",
      },
      "マ": Trie {
        "data": [],
        "fail": null,
        "is_word": null,
        "next": {
          "ス": Trie {
            "data": [],
            "fail": Trie {
              "data": [],
              "fail": null,
              "is_word": null,
              "next": {
                "キ": Trie {
                  "data": [],
                  "fail": Trie {
                    "data": [],
                    "fail": null,
                    "is_word": null,
                    "next": {
                      "ン": Trie {
                        "data": [],
                        "fail": null,
                        "is_word": null,
                        "next": {
                          "グ": Trie {
                            "data": [
                              [
                                "王",
                              ],
                            ],
                            "fail": null,
                            "is_word": true,
                            "next": {},
                            "value": "キング",
                          },
                        },
                        "value": "キン",
                      },
                    },
                    "value": "キ",
                  },
                  "is_word": null,
                  "next": {
                    "ュ": Trie {
                      "data": [],
                      "fail": null,
                      "is_word": null,
                      "next": {
                        "ラ": Trie {
                          "data": [
                            [
                              "斯庫拉",
                            ],
                          ],
                          "fail": Trie {
                            "data": [],
                            "fail": null,
                            "is_word": null,
                            "next": {
                              "ス": Trie {
                                "data": [],
                                "fail": [Circular],
                                "is_word": null,
                                "next": {
                                  "ト": Trie {
                                    "data": [
                                      [
                                        "Lust 性欲 渇望 Last 最後",
                                      ],
                                    ],
                                    "fail": null,
                                    "is_word": true,
                                    "next": {
                                      "ロ": Trie {
                                        "data": [],
                                        "fail": Trie {
                                          "data": [],
                                          "fail": null,
                                          "is_word": null,
                                          "next": {
                                            "ー": Trie {
                                              "data": [],
                                              "fail": null,
                                              "is_word": null,
                                              "next": {
                                                "ズ": Trie {
                                                  "data": [
                                                    [
                                                      "薔薇 玫瑰",
                                                    ],
                                                  ],
                                                  "fail": null,
                                                  "is_word": true,
                                                  "next": {},
                                                  "value": "ローズ",
                                                },
                                              },
                                              "value": "ロー",
                                            },
                                          },
                                          "value": "ロ",
                                        },
                                        "is_word": null,
                                        "next": {
                                          "ー": Trie {
                                            "data": [],
                                            "fail": Trie {
                                              "data": [],
                                              "fail": null,
                                              "is_word": null,
                                              "next": {
                                                "ズ": Trie {
                                                  "data": [
                                                    [
                                                      "薔薇 玫瑰",
                                                    ],
                                                  ],
                                                  "fail": null,
                                                  "is_word": true,
                                                  "next": {},
                                                  "value": "ローズ",
                                                },
                                              },
                                              "value": "ロー",
                                            },
                                            "is_word": null,
                                            "next": {
                                              "ズ": Trie {
                                                "data": [
                                                  [
                                                    "淫欲罗茲 最後的玫瑰",
                                                  ],
                                                ],
                                                "fail": Trie {
                                                  "data": [
                                                    [
                                                      "薔薇 玫瑰",
                                                    ],
                                                  ],
                                                  "fail": null,
                                                  "is_word": true,
                                                  "next": {},
                                                  "value": "ローズ",
                                                },
                                                "is_word": true,
                                                "next": {},
                                                "value": "ラストローズ",
                                              },
                                            },
                                            "value": "ラストロー",
                                          },
                                        },
                                        "value": "ラストロ",
                                      },
                                    },
                                    "value": "ラスト",
                                  },
                                },
                                "value": "ラス",
                              },
                            },
                            "value": "ラ",
                          },
                          "is_word": true,
                          "next": {},
                          "value": "スキュラ",
                        },
                      },
                      "value": "スキュ",
                    },
                  },
                  "value": "スキ",
                },
              },
              "value": "ス",
            },
            "is_word": null,
            "next": {
              "タ": Trie {
                "data": [],
                "fail": null,
                "is_word": null,
                "next": {
                  "ー": Trie {
                    "data": [
                      [
                        "大師",
                      ],
                    ],
                    "fail": null,
                    "is_word": true,
                    "next": {},
                    "value": "マスター",
                  },
                },
                "value": "マスタ",
              },
            },
            "value": "マス",
          },
        },
        "value": "マ",
      },
      "ラ": Trie {
        "data": [],
        "fail": null,
        "is_word": null,
        "next": {
          "ス": Trie {
            "data": [],
            "fail": Trie {
              "data": [],
              "fail": null,
              "is_word": null,
              "next": {
                "キ": Trie {
                  "data": [],
                  "fail": Trie {
                    "data": [],
                    "fail": null,
                    "is_word": null,
                    "next": {
                      "ン": Trie {
                        "data": [],
                        "fail": null,
                        "is_word": null,
                        "next": {
                          "グ": Trie {
                            "data": [
                              [
                                "王",
                              ],
                            ],
                            "fail": null,
                            "is_word": true,
                            "next": {},
                            "value": "キング",
                          },
                        },
                        "value": "キン",
                      },
                    },
                    "value": "キ",
                  },
                  "is_word": null,
                  "next": {
                    "ュ": Trie {
                      "data": [],
                      "fail": null,
                      "is_word": null,
                      "next": {
                        "ラ": Trie {
                          "data": [
                            [
                              "斯庫拉",
                            ],
                          ],
                          "fail": [Circular],
                          "is_word": true,
                          "next": {},
                          "value": "スキュラ",
                        },
                      },
                      "value": "スキュ",
                    },
                  },
                  "value": "スキ",
                },
              },
              "value": "ス",
            },
            "is_word": null,
            "next": {
              "ト": Trie {
                "data": [
                  [
                    "Lust 性欲 渇望 Last 最後",
                  ],
                ],
                "fail": null,
                "is_word": true,
                "next": {
                  "ロ": Trie {
                    "data": [],
                    "fail": Trie {
                      "data": [],
                      "fail": null,
                      "is_word": null,
                      "next": {
                        "ー": Trie {
                          "data": [],
                          "fail": null,
                          "is_word": null,
                          "next": {
                            "ズ": Trie {
                              "data": [
                                [
                                  "薔薇 玫瑰",
                                ],
                              ],
                              "fail": null,
                              "is_word": true,
                              "next": {},
                              "value": "ローズ",
                            },
                          },
                          "value": "ロー",
                        },
                      },
                      "value": "ロ",
                    },
                    "is_word": null,
                    "next": {
                      "ー": Trie {
                        "data": [],
                        "fail": Trie {
                          "data": [],
                          "fail": null,
                          "is_word": null,
                          "next": {
                            "ズ": Trie {
                              "data": [
                                [
                                  "薔薇 玫瑰",
                                ],
                              ],
                              "fail": null,
                              "is_word": true,
                              "next": {},
                              "value": "ローズ",
                            },
                          },
                          "value": "ロー",
                        },
                        "is_word": null,
                        "next": {
                          "ズ": Trie {
                            "data": [
                              [
                                "淫欲罗茲 最後的玫瑰",
                              ],
                            ],
                            "fail": Trie {
                              "data": [
                                [
                                  "薔薇 玫瑰",
                                ],
                              ],
                              "fail": null,
                              "is_word": true,
                              "next": {},
                              "value": "ローズ",
                            },
                            "is_word": true,
                            "next": {},
                            "value": "ラストローズ",
                          },
                        },
                        "value": "ラストロー",
                      },
                    },
                    "value": "ラストロ",
                  },
                },
                "value": "ラスト",
              },
            },
            "value": "ラス",
          },
        },
        "value": "ラ",
      },
      "ロ": Trie {
        "data": [],
        "fail": null,
        "is_word": null,
        "next": {
          "ー": Trie {
            "data": [],
            "fail": null,
            "is_word": null,
            "next": {
              "ズ": Trie {
                "data": [
                  [
                    "薔薇 玫瑰",
                  ],
                ],
                "fail": null,
                "is_word": true,
                "next": {},
                "value": "ローズ",
              },
            },
            "value": "ロー",
          },
        },
        "value": "ロ",
      },
    },
    "value": null,
  },
}
`;

exports[`クリスタルエンプーサ 1`] = `
{
  "count": {
    "エンプーサ": 1,
    "クリスタル": 1,
  },
  "data": {
    "エンプーサ": [
      [
        "安普莎",
      ],
    ],
    "クリスタル": [
      [
        "水晶",
      ],
    ],
  },
  "matches": {
    "エンプーサ": [
      5,
    ],
    "クリスタル": [
      0,
    ],
  },
  "positions": {
    "0": [
      "クリスタル",
    ],
    "5": [
      "エンプーサ",
    ],
  },
}
`;

exports[`クリスタルエンプーサ 2`] = `
{
  "data": {
    "エンプーサ": [
      [
        "安普莎",
      ],
    ],
    "クリスタル": [
      [
        "水晶",
      ],
    ],
  },
  "input": "クリスタルエンプーサ",
  "positions": {
    "0": [
      "クリスタル",
    ],
    "5": [
      "エンプーサ",
    ],
  },
}
`;

exports[`スキュラオリジンハイドルイド 1`] = `
{
  "count": {
    "オリジン": 1,
    "スキュラ": 1,
    "ドルイド": 1,
    "ハイ": 1,
  },
  "data": {
    "オリジン": [
      [
        "起源",
      ],
    ],
    "スキュラ": [
      [
        "斯庫拉",
      ],
    ],
    "ドルイド": [
      [
        "德魯伊",
      ],
    ],
    "ハイ": [
      [
        "高等",
      ],
    ],
  },
  "matches": {
    "オリジン": [
      4,
    ],
    "スキュラ": [
      0,
    ],
    "ドルイド": [
      10,
    ],
    "ハイ": [
      8,
    ],
  },
  "positions": {
    "0": [
      "スキュラ",
    ],
    "10": [
      "ドルイド",
    ],
    "4": [
      "オリジン",
    ],
    "8": [
      "ハイ",
    ],
  },
}
`;

exports[`スキュラオリジンハイドルイド 2`] = `
{
  "data": {
    "オリジン": [
      [
        "起源",
      ],
    ],
    "スキュラ": [
      [
        "斯庫拉",
      ],
    ],
    "ドルイド": [
      [
        "德魯伊",
      ],
    ],
    "ハイ": [
      [
        "高等",
      ],
    ],
  },
  "input": "スキュラオリジンハイドルイド",
  "positions": {
    "0": [
      "スキュラ",
    ],
    "10": [
      "ドルイド",
    ],
    "4": [
      "オリジン",
    ],
    "8": [
      "ハイ",
    ],
  },
}
`;

exports[`ホブゴブリン 1`] = `
{
  "count": {
    "ゴブリン": 1,
    "ホブ": 1,
  },
  "data": {
    "ゴブリン": [
      [
        "哥布林",
      ],
    ],
    "ホブ": [
      [
        "滚刀",
      ],
    ],
  },
  "matches": {
    "ゴブリン": [
      2,
    ],
    "ホブ": [
      0,
    ],
  },
  "positions": {
    "0": [
      "ホブ",
    ],
    "2": [
      "ゴブリン",
    ],
  },
}
`;

exports[`ホブゴブリン 2`] = `
{
  "data": {
    "ゴブリン": [
      [
        "哥布林",
      ],
    ],
    "ホブ": [
      [
        "滚刀",
      ],
    ],
  },
  "input": "ホブゴブリン",
  "positions": {
    "0": [
      "ホブ",
    ],
    "2": [
      "ゴブリン",
    ],
  },
}
`;

exports[`ラストローズ 1`] = `
{
  "count": {
    "ラスト": 1,
    "ラストローズ": 1,
    "ローズ": 1,
  },
  "data": {
    "ラスト": [
      [
        "Lust 性欲 渇望 Last 最後",
      ],
    ],
    "ラストローズ": [
      [
        "淫欲罗茲 最後的玫瑰",
      ],
    ],
    "ローズ": [
      [
        "薔薇 玫瑰",
      ],
    ],
  },
  "matches": {
    "ラスト": [
      0,
    ],
    "ラストローズ": [
      0,
    ],
    "ローズ": [
      3,
    ],
  },
  "positions": {
    "0": [
      "ラスト",
      "ラストローズ",
    ],
    "3": [
      "ローズ",
    ],
  },
}
`;

exports[`ラストローズ 2`] = `
{
  "data": {
    "ラスト": [
      [
        "Lust 性欲 渇望 Last 最後",
      ],
    ],
    "ラストローズ": [
      [
        "淫欲罗茲 最後的玫瑰",
      ],
    ],
    "ローズ": [
      [
        "薔薇 玫瑰",
      ],
    ],
  },
  "input": "ラストローズ",
  "positions": {
    "0": [
      "ラスト",
      "ラストローズ",
    ],
    "3": [
      "ローズ",
    ],
  },
}
`;
